Fixed autocomplete lists inside modals
Before we would put the autocomplete list inside the <aside> element.
That wouldn't work if it overflowed the modal.  Instead make it a
child of the <body> tag.  Updated the positioning logic.

--- a/media/src/css/site/forms.scss
+++ b/media/src/css/site/forms.scss
@@ -65,7 +65,6 @@ input[type=file] {
 }
 
 label {
-    position: relative;
     display: block;
     padding: 0;
     margin: 0 0 $line-height/2 0;
@@ -95,13 +94,9 @@ ul.errorlist {
 }
 
 .autocomplete {
-    display: none;
     position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;
     padding: 0 4px;
-    margin-top: -1px;
+    margin: 0;
     border: 1px solid $light-gray;
     background: $white;
     z-index: $z-index-menu;
