--- a/media/src/css/site/layout.scss
+++ b/media/src/css/site/layout.scss
@@ -3,9 +3,9 @@ $break-medium: 900px;
 $content-max-width: 1200px;
 $content-max-width-narrow: 900px;
 
-$z-index-menu: 1;
 $z-index-overlay: 100;
 $z-index-modal: 101;
+$z-index-menu: 102;
 
 html, body {
     margin: 0;
